--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -1,3 +1,8 @@
+
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     max-width: 100vw;
     max-height: 100vh;
@@ -5,4 +10,5 @@ body {
     padding: 0;
     overflow-x: hidden;
     font-family: 'Montserrat';
+    background-color: #ff9933;
 }
